# EvolveSquad

./: docker-compose.yml
androidApp/app/: build.gradle.kts  settings.gradle.kts
androidApp/app/src/main/: AndroidManifest.xml
androidApp/app/src/main/java/com/example/featurevotes/: MainActivity.kt
androidApp/app/src/main/java/com/example/featurevotes/api/: Api.kt
androidApp/app/src/main/java/com/example/featurevotes/data/: Repository.kt
androidApp/app/src/main/java/com/example/featurevotes/ui/: AddFeatureScreen.kt  ListScreen.kt
androidApp/app/src/main/res/values/: strings.xml
backend/: .env.example  Dockerfile  README.md  conftest.py  pyproject.toml  settings.py  test_api.py  urls.py
backend/app/: admin.py  models.py  serializers.py  urls.py  views.py
backend/app/managment/commands/: dev_seed.py
backend/app/migrations/: 0001_initial.py
